# ISTE-444

exam_prep/: Linux and Bash Practice.docx  apache_log.txt  exam_prep.md  log.txt  prep.sh
labs/lab1/: Pallotta_ISTE444_Lab1.docx
labs/lab2/: ISTE_444_Lab2.docx
labs/lab2/task1/: Lab2_Task1.sh  rands_100.txt  rands_1000.txt  rands_500.txt
labs/lab2/task2/: Lab2_Task2.sh
labs/lab4/: index.html
labs/lab6/: system.orchestration.py
project1/: project01.sh
project2/: package-lock.json  package.json  rans.service  setup.sh
project2/arangodb3/: VERSION-200
project2/arangodb3/engine-rocksdb/: 000074.sst  000086.sst  000089.sst  000092.sst  000108.sst  000109.sst  000110.sst  000125.sst  000140.sst  000146.sst  000151.sst  000152.sst  000168.sst  000169.sst  000170.sst  000185.sst  000200.sst  000206.sst  000211.sst  000213.sst  000228.sst  000229.sst  000230.sst  000245.sst  MANIFEST-000082  MANIFEST-000113  MANIFEST-000142  MANIFEST-000173  MANIFEST-000202  MANIFEST-000233
project2/client/: index.html  package-lock.json  package.json  vite.config.ts
project2/client/src/: App.svelte  app.css
project2/client/src/components/: ItemCard.svelte  ItemModal.svelte  NavBar.svelte  Notification.svelte  SearchBar.svelte
project2/client/src/pages/: Home.svelte  Login.svelte  LoginPage.svelte  (+1 more)
project2/config/: config.toml  nginx.conf
project2/server/: Cargo.toml
project2/server/src/: api_requests.rs  db.rs  lib.rs  logs.rs  main.rs  models.rs
project2/server/src/requests/: auth.rs  items.rs  routes.rs
project2/systemd/: rans.api.service  rans.service
(+6 files in other folders)
